etapa_2/parser.output
Terminals unused in grammar

    TK_TIPO
    TK_ER


Grammar

    0 $accept: programa $end

    1 programa: lista_elementos_opt ';'

    2 lista_elementos_opt: ε
    3                    | lista_elementos

    4 lista_elementos: elemento
    5                | lista_elementos ',' elemento

    6 elemento: definicao_funcao
    7         | declaracao_variavel

    8 definicao_funcao: TK_ID TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos

    9 tipo: TK_DECIMAL
   10     | TK_INTEIRO

   11 parametros_opt: ε
   12               | TK_COM lista_parametros

   13 lista_parametros: parametro
   14                 | lista_parametros ',' parametro

   15 parametro: TK_ID TK_ATRIB tipo

   16 bloco_comandos: '[' lista_comandos_opt ']'

   17 lista_comandos_opt: ε
   18                   | lista_comandos

   19 lista_comandos: comando_simples
   20               | lista_comandos comando_simples

   21 comando_simples: bloco_comandos
   22                | declaracao_variavel
   23                | comando_atribuicao
   24                | chamada_funcao
   25                | comando_retorno
   26                | comando_condicional
   27                | comando_enquanto

   28 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo inicializacao_opt

   29 inicializacao_opt: ε
   30                  | TK_COM literal

   31 literal: TK_LI_INTEIRO
   32        | TK_LI_DECIMAL

   33 comando_atribuicao: TK_ID TK_ATRIB expressao

   34 chamada_funcao: TK_ID '(' argumentos_opt ')'

   35 argumentos_opt: ε
   36               | lista_argumentos

   37 lista_argumentos: expressao
   38                 | lista_argumentos ',' expressao

   39 comando_retorno: TK_RETORNA expressao TK_ATRIB tipo

   40 comando_condicional: TK_SE '(' expressao ')' bloco_comandos senao_opt

   41 senao_opt: ε
   42          | TK_SENAO bloco_comandos

   43 comando_enquanto: TK_ENQUANTO '(' expressao ')' bloco_comandos

   44 expressao: expressao_or

   45 expressao_or: expressao_and
   46             | expressao_or '|' expressao_and

   47 expressao_and: expressao_eq
   48              | expressao_and '&' expressao_eq

   49 expressao_eq: expressao_rel
   50             | expressao_eq TK_OC_EQ expressao_rel
   51             | expressao_eq TK_OC_NE expressao_rel

   52 expressao_rel: expressao_add
   53              | expressao_rel '<' expressao_add
   54              | expressao_rel '>' expressao_add
   55              | expressao_rel TK_OC_LE expressao_add
   56              | expressao_rel TK_OC_GE expressao_add

   57 expressao_add: expressao_mul
   58              | expressao_add '+' expressao_mul
   59              | expressao_add '-' expressao_mul

   60 expressao_mul: expressao_unaria
   61              | expressao_mul '*' expressao_unaria
   62              | expressao_mul '/' expressao_unaria
   63              | expressao_mul '%' expressao_unaria

   64 expressao_unaria: expressao_primaria
   65                 | '!' expressao_unaria
   66                 | '+' expressao_unaria
   67                 | '-' expressao_unaria

   68 expressao_primaria: chamada_funcao
   69                   | literal
   70                   | TK_ID
   71                   | '(' expressao ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 65
    '%' (37) 63
    '&' (38) 48
    '(' (40) 34 40 43 71
    ')' (41) 34 40 43 71
    '*' (42) 61
    '+' (43) 58 66
    ',' (44) 5 14 38
    '-' (45) 59 67
    '/' (47) 62
    ';' (59) 1
    '<' (60) 53
    '>' (62) 54
    '[' (91) 16
    ']' (93) 16
    '|' (124) 46
    error (256)
    TK_TIPO (258)
    TK_VAR (259) 28
    TK_SENAO (260) 42
    TK_DECIMAL (261) 9
    TK_SE (262) 40
    TK_INTEIRO (263) 10
    TK_ATRIB (264) 8 15 28 33 39
    TK_RETORNA (265) 39
    TK_SETA (266) 8
    TK_ENQUANTO (267) 43
    TK_COM (268) 12 30
    TK_OC_LE (269) 55
    TK_OC_GE (270) 56
    TK_OC_EQ (271) 50
    TK_OC_NE (272) 51
    TK_ID (273) 8 15 28 33 34 70
    TK_LI_INTEIRO (274) 31
    TK_LI_DECIMAL (275) 32
    TK_ER (276)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa (39)
        on left: 1
        on right: 0
    lista_elementos_opt (40)
        on left: 2 3
        on right: 1
    lista_elementos (41)
        on left: 4 5
        on right: 3 5
    elemento (42)
        on left: 6 7
        on right: 4 5
    definicao_funcao (43)
        on left: 8
        on right: 6
    tipo (44)
        on left: 9 10
        on right: 8 15 28 39
    parametros_opt (45)
        on left: 11 12
        on right: 8
    lista_parametros (46)
        on left: 13 14
        on right: 12 14
    parametro (47)
        on left: 15
        on right: 13 14
    bloco_comandos (48)
        on left: 16
        on right: 8 21 40 42 43
    lista_comandos_opt (49)
        on left: 17 18
        on right: 16
    lista_comandos (50)
        on left: 19 20
        on right: 18 20
    comando_simples (51)
        on left: 21 22 23 24 25 26 27
        on right: 19 20
    declaracao_variavel (52)
        on left: 28
        on right: 7 22
    inicializacao_opt (53)
        on left: 29 30
        on right: 28
    literal (54)
        on left: 31 32
        on right: 30 69
    comando_atribuicao (55)
        on left: 33
        on right: 23
    chamada_funcao (56)
        on left: 34
        on right: 24 68
    argumentos_opt (57)
        on left: 35 36
        on right: 34
    lista_argumentos (58)
        on left: 37 38
        on right: 36 38
    comando_retorno (59)
        on left: 39
        on right: 25
    comando_condicional (60)
        on left: 40
        on right: 26
    senao_opt (61)
        on left: 41 42
        on right: 40
    comando_enquanto (62)
        on left: 43
        on right: 27
    expressao (63)
        on left: 44
        on right: 33 37 38 39 40 43 71
    expressao_or (64)
        on left: 45 46
        on right: 44 46
    expressao_and (65)
        on left: 47 48
        on right: 45 46 48
    expressao_eq (66)
        on left: 49 50 51
        on right: 47 48 50 51
    expressao_rel (67)
        on left: 52 53 54 55 56
        on right: 49 50 51 53 54 55 56
    expressao_add (68)
        on left: 57 58 59
        on right: 52 53 54 55 56 58 59
    expressao_mul (69)
        on left: 60 61 62 63
        on right: 57 58 59 61 62 63
    expressao_unaria (70)
        on left: 64 65 66 67
        on right: 60 61 62 63 65 66 67
    expressao_primaria (71)
        on left: 68 69 70 71
        on right: 64


State 0

    0 $accept: • programa $end

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    $default  reduce using rule 2 (lista_elementos_opt)

    programa             go to state 3
    lista_elementos_opt  go to state 4
    lista_elementos      go to state 5
    elemento             go to state 6
    definicao_funcao     go to state 7
    declaracao_variavel  go to state 8


State 1

   28 declaracao_variavel: TK_VAR • TK_ID TK_ATRIB tipo inicializacao_opt

    TK_ID  shift, and go to state 9


State 2

    8 definicao_funcao: TK_ID • TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos

    TK_SETA  shift, and go to state 10


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 11


State 4

    1 programa: lista_elementos_opt • ';'

    ';'  shift, and go to state 12


State 5

    3 lista_elementos_opt: lista_elementos •
    5 lista_elementos: lista_elementos • ',' elemento

    ','  shift, and go to state 13

    $default  reduce using rule 3 (lista_elementos_opt)


State 6

    4 lista_elementos: elemento •

    $default  reduce using rule 4 (lista_elementos)


State 7

    6 elemento: definicao_funcao •

    $default  reduce using rule 6 (elemento)


State 8

    7 elemento: declaracao_variavel •

    $default  reduce using rule 7 (elemento)


State 9

   28 declaracao_variavel: TK_VAR TK_ID • TK_ATRIB tipo inicializacao_opt

    TK_ATRIB  shift, and go to state 14


State 10

    8 definicao_funcao: TK_ID TK_SETA • tipo parametros_opt TK_ATRIB bloco_comandos

    TK_DECIMAL  shift, and go to state 15
    TK_INTEIRO  shift, and go to state 16

    tipo  go to state 17


State 11

    0 $accept: programa $end •

    $default  accept


State 12

    1 programa: lista_elementos_opt ';' •

    $default  reduce using rule 1 (programa)


State 13

    5 lista_elementos: lista_elementos ',' • elemento

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    elemento             go to state 18
    definicao_funcao     go to state 7
    declaracao_variavel  go to state 8


State 14

   28 declaracao_variavel: TK_VAR TK_ID TK_ATRIB • tipo inicializacao_opt

    TK_DECIMAL  shift, and go to state 15
    TK_INTEIRO  shift, and go to state 16

    tipo  go to state 19


State 15

    9 tipo: TK_DECIMAL •

    $default  reduce using rule 9 (tipo)


State 16

   10 tipo: TK_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 17

    8 definicao_funcao: TK_ID TK_SETA tipo • parametros_opt TK_ATRIB bloco_comandos

    TK_COM  shift, and go to state 20

    $default  reduce using rule 11 (parametros_opt)

    parametros_opt  go to state 21


State 18

    5 lista_elementos: lista_elementos ',' elemento •

    $default  reduce using rule 5 (lista_elementos)


State 19

   28 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo • inicializacao_opt

    TK_COM  shift, and go to state 22

    $default  reduce using rule 29 (inicializacao_opt)

    inicializacao_opt  go to state 23


State 20

   12 parametros_opt: TK_COM • lista_parametros

    TK_ID  shift, and go to state 24

    lista_parametros  go to state 25
    parametro         go to state 26


State 21

    8 definicao_funcao: TK_ID TK_SETA tipo parametros_opt • TK_ATRIB bloco_comandos

    TK_ATRIB  shift, and go to state 27


State 22

   30 inicializacao_opt: TK_COM • literal

    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29

    literal  go to state 30


State 23

   28 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo inicializacao_opt •

    $default  reduce using rule 28 (declaracao_variavel)


State 24

   15 parametro: TK_ID • TK_ATRIB tipo

    TK_ATRIB  shift, and go to state 31


State 25

   12 parametros_opt: TK_COM lista_parametros •
   14 lista_parametros: lista_parametros • ',' parametro

    ','  shift, and go to state 32

    $default  reduce using rule 12 (parametros_opt)


State 26

   13 lista_parametros: parametro •

    $default  reduce using rule 13 (lista_parametros)


State 27

    8 definicao_funcao: TK_ID TK_SETA tipo parametros_opt TK_ATRIB • bloco_comandos

    '['  shift, and go to state 33

    bloco_comandos  go to state 34


State 28

   31 literal: TK_LI_INTEIRO •

    $default  reduce using rule 31 (literal)


State 29

   32 literal: TK_LI_DECIMAL •

    $default  reduce using rule 32 (literal)


State 30

   30 inicializacao_opt: TK_COM literal •

    $default  reduce using rule 30 (inicializacao_opt)


State 31

   15 parametro: TK_ID TK_ATRIB • tipo

    TK_DECIMAL  shift, and go to state 15
    TK_INTEIRO  shift, and go to state 16

    tipo  go to state 35


State 32

   14 lista_parametros: lista_parametros ',' • parametro

    TK_ID  shift, and go to state 24

    parametro  go to state 36


State 33

   16 bloco_comandos: '[' • lista_comandos_opt ']'

    TK_VAR       shift, and go to state 1
    TK_SE        shift, and go to state 37
    TK_RETORNA   shift, and go to state 38
    TK_ENQUANTO  shift, and go to state 39
    TK_ID        shift, and go to state 40
    '['          shift, and go to state 33

    $default  reduce using rule 17 (lista_comandos_opt)

    bloco_comandos       go to state 41
    lista_comandos_opt   go to state 42
    lista_comandos       go to state 43
    comando_simples      go to state 44
    declaracao_variavel  go to state 45
    comando_atribuicao   go to state 46
    chamada_funcao       go to state 47
    comando_retorno      go to state 48
    comando_condicional  go to state 49
    comando_enquanto     go to state 50


State 34

    8 definicao_funcao: TK_ID TK_SETA tipo parametros_opt TK_ATRIB bloco_comandos •

    $default  reduce using rule 8 (definicao_funcao)


State 35

   15 parametro: TK_ID TK_ATRIB tipo •

    $default  reduce using rule 15 (parametro)


State 36

   14 lista_parametros: lista_parametros ',' parametro •

    $default  reduce using rule 14 (lista_parametros)


State 37

   40 comando_condicional: TK_SE • '(' expressao ')' bloco_comandos senao_opt

    '('  shift, and go to state 51


State 38

   39 comando_retorno: TK_RETORNA • expressao TK_ATRIB tipo

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao           go to state 59
    expressao_or        go to state 60
    expressao_and       go to state 61
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 39

   43 comando_enquanto: TK_ENQUANTO • '(' expressao ')' bloco_comandos

    '('  shift, and go to state 68


State 40

   33 comando_atribuicao: TK_ID • TK_ATRIB expressao
   34 chamada_funcao: TK_ID • '(' argumentos_opt ')'

    TK_ATRIB  shift, and go to state 69
    '('       shift, and go to state 70


State 41

   21 comando_simples: bloco_comandos •

    $default  reduce using rule 21 (comando_simples)


State 42

   16 bloco_comandos: '[' lista_comandos_opt • ']'

    ']'  shift, and go to state 71


State 43

   18 lista_comandos_opt: lista_comandos •
   20 lista_comandos: lista_comandos • comando_simples

    TK_VAR       shift, and go to state 1
    TK_SE        shift, and go to state 37
    TK_RETORNA   shift, and go to state 38
    TK_ENQUANTO  shift, and go to state 39
    TK_ID        shift, and go to state 40
    '['          shift, and go to state 33

    $default  reduce using rule 18 (lista_comandos_opt)

    bloco_comandos       go to state 41
    comando_simples      go to state 72
    declaracao_variavel  go to state 45
    comando_atribuicao   go to state 46
    chamada_funcao       go to state 47
    comando_retorno      go to state 48
    comando_condicional  go to state 49
    comando_enquanto     go to state 50


State 44

   19 lista_comandos: comando_simples •

    $default  reduce using rule 19 (lista_comandos)


State 45

   22 comando_simples: declaracao_variavel •

    $default  reduce using rule 22 (comando_simples)


State 46

   23 comando_simples: comando_atribuicao •

    $default  reduce using rule 23 (comando_simples)


State 47

   24 comando_simples: chamada_funcao •

    $default  reduce using rule 24 (comando_simples)


State 48

   25 comando_simples: comando_retorno •

    $default  reduce using rule 25 (comando_simples)


State 49

   26 comando_simples: comando_condicional •

    $default  reduce using rule 26 (comando_simples)


State 50

   27 comando_simples: comando_enquanto •

    $default  reduce using rule 27 (comando_simples)


State 51

   40 comando_condicional: TK_SE '(' • expressao ')' bloco_comandos senao_opt

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao           go to state 73
    expressao_or        go to state 60
    expressao_and       go to state 61
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 52

   34 chamada_funcao: TK_ID • '(' argumentos_opt ')'
   70 expressao_primaria: TK_ID •

    '('  shift, and go to state 70

    $default  reduce using rule 70 (expressao_primaria)


State 53

   71 expressao_primaria: '(' • expressao ')'

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao           go to state 74
    expressao_or        go to state 60
    expressao_and       go to state 61
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 54

   66 expressao_unaria: '+' • expressao_unaria

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_unaria    go to state 75
    expressao_primaria  go to state 67


State 55

   67 expressao_unaria: '-' • expressao_unaria

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_unaria    go to state 76
    expressao_primaria  go to state 67


State 56

   65 expressao_unaria: '!' • expressao_unaria

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_unaria    go to state 77
    expressao_primaria  go to state 67


State 57

   69 expressao_primaria: literal •

    $default  reduce using rule 69 (expressao_primaria)


State 58

   68 expressao_primaria: chamada_funcao •

    $default  reduce using rule 68 (expressao_primaria)


State 59

   39 comando_retorno: TK_RETORNA expressao • TK_ATRIB tipo

    TK_ATRIB  shift, and go to state 78


State 60

   44 expressao: expressao_or •
   46 expressao_or: expressao_or • '|' expressao_and

    '|'  shift, and go to state 79

    $default  reduce using rule 44 (expressao)


State 61

   45 expressao_or: expressao_and •
   48 expressao_and: expressao_and • '&' expressao_eq

    '&'  shift, and go to state 80

    $default  reduce using rule 45 (expressao_or)


State 62

   47 expressao_and: expressao_eq •
   50 expressao_eq: expressao_eq • TK_OC_EQ expressao_rel
   51             | expressao_eq • TK_OC_NE expressao_rel

    TK_OC_EQ  shift, and go to state 81
    TK_OC_NE  shift, and go to state 82

    $default  reduce using rule 47 (expressao_and)


State 63

   49 expressao_eq: expressao_rel •
   53 expressao_rel: expressao_rel • '<' expressao_add
   54              | expressao_rel • '>' expressao_add
   55              | expressao_rel • TK_OC_LE expressao_add
   56              | expressao_rel • TK_OC_GE expressao_add

    TK_OC_LE  shift, and go to state 83
    TK_OC_GE  shift, and go to state 84
    '<'       shift, and go to state 85
    '>'       shift, and go to state 86

    $default  reduce using rule 49 (expressao_eq)


State 64

   52 expressao_rel: expressao_add •
   58 expressao_add: expressao_add • '+' expressao_mul
   59              | expressao_add • '-' expressao_mul

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88

    $default  reduce using rule 52 (expressao_rel)


State 65

   57 expressao_add: expressao_mul •
   61 expressao_mul: expressao_mul • '*' expressao_unaria
   62              | expressao_mul • '/' expressao_unaria
   63              | expressao_mul • '%' expressao_unaria

    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91

    $default  reduce using rule 57 (expressao_add)


State 66

   60 expressao_mul: expressao_unaria •

    $default  reduce using rule 60 (expressao_mul)


State 67

   64 expressao_unaria: expressao_primaria •

    $default  reduce using rule 64 (expressao_unaria)


State 68

   43 comando_enquanto: TK_ENQUANTO '(' • expressao ')' bloco_comandos

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao           go to state 92
    expressao_or        go to state 60
    expressao_and       go to state 61
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 69

   33 comando_atribuicao: TK_ID TK_ATRIB • expressao

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao           go to state 93
    expressao_or        go to state 60
    expressao_and       go to state 61
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 70

   34 chamada_funcao: TK_ID '(' • argumentos_opt ')'

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    $default  reduce using rule 35 (argumentos_opt)

    literal             go to state 57
    chamada_funcao      go to state 58
    argumentos_opt      go to state 94
    lista_argumentos    go to state 95
    expressao           go to state 96
    expressao_or        go to state 60
    expressao_and       go to state 61
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 71

   16 bloco_comandos: '[' lista_comandos_opt ']' •

    $default  reduce using rule 16 (bloco_comandos)


State 72

   20 lista_comandos: lista_comandos comando_simples •

    $default  reduce using rule 20 (lista_comandos)


State 73

   40 comando_condicional: TK_SE '(' expressao • ')' bloco_comandos senao_opt

    ')'  shift, and go to state 97


State 74

   71 expressao_primaria: '(' expressao • ')'

    ')'  shift, and go to state 98


State 75

   66 expressao_unaria: '+' expressao_unaria •

    $default  reduce using rule 66 (expressao_unaria)


State 76

   67 expressao_unaria: '-' expressao_unaria •

    $default  reduce using rule 67 (expressao_unaria)


State 77

   65 expressao_unaria: '!' expressao_unaria •

    $default  reduce using rule 65 (expressao_unaria)


State 78

   39 comando_retorno: TK_RETORNA expressao TK_ATRIB • tipo

    TK_DECIMAL  shift, and go to state 15
    TK_INTEIRO  shift, and go to state 16

    tipo  go to state 99


State 79

   46 expressao_or: expressao_or '|' • expressao_and

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_and       go to state 100
    expressao_eq        go to state 62
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 80

   48 expressao_and: expressao_and '&' • expressao_eq

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_eq        go to state 101
    expressao_rel       go to state 63
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 81

   50 expressao_eq: expressao_eq TK_OC_EQ • expressao_rel

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_rel       go to state 102
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 82

   51 expressao_eq: expressao_eq TK_OC_NE • expressao_rel

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_rel       go to state 103
    expressao_add       go to state 64
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 83

   55 expressao_rel: expressao_rel TK_OC_LE • expressao_add

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_add       go to state 104
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 84

   56 expressao_rel: expressao_rel TK_OC_GE • expressao_add

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_add       go to state 105
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 85

   53 expressao_rel: expressao_rel '<' • expressao_add

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_add       go to state 106
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 86

   54 expressao_rel: expressao_rel '>' • expressao_add

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_add       go to state 107
    expressao_mul       go to state 65
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 87

   58 expressao_add: expressao_add '+' • expressao_mul

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56

    literal             go to state 57
    chamada_funcao      go to state 58
    expressao_mul       go to state 108
    expressao_unaria    go to state 66
    expressao_primaria  go to state 67


State 88

   59 expressao_add: expressao_add '-' • expressao_mul

    TK_ID          shift, and go to state 52
    TK_LI_INTEIRO  shift, and go to state 28
    TK_LI_DECIMAL  shift, and go to state 29
    '('            shift, and go to state 53
    '+'            shift, and go to state 54
    '-'            shift, and go to state 55
    '!'            shift, and go to state 56
